Menu [FIX] Vertical alignment goodness

--- a/less2/src/elements/_menu.less
+++ b/less2/src/elements/_menu.less
@@ -209,6 +209,8 @@
 // ====
 .lui.menu:not(.vertical) {
     .flex-direction(row);
+}
+.lui.menu.v-aligned {
     .flex-align-items(center);
 }
 
